@@ -1,3 +1,7 @@
+Mon Jun  2 23:19:22 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gtktempmap.c (GTKShowTempMap): remove gtk_aspect_frame for now.
+
 Mon Jun  2 23:11:02 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtktempmap.c (UpdateMapEquities): show best move in tool tip.
